--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
       dialect: org.hibernate.dialect.PostgreSQL94Dialect
       hibernate:
         order_by.default_null_ordering: last
+      format_sql: true
     show-sql: false
   profiles:
     active: dev
